--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ templates/contract-deploy/dynamic-kurtosis-allocs.json
 templates/contract-deploy/dynamic-kurtosis-conf.json
 templates/contract-deploy/genesis.json
 anvil_state.json
+combined.json
