--- a/kurtosis.yml
+++ b/kurtosis.yml
@@ -1,3 +1,3 @@
-name: github.com/0xPolygon/kurtosis-cdk
+name: github.com/Pana/kurtosis-cdk
 description: |
   A Kurtosis package that deploys a private, portable, and modular Polygon CDK devnet.
