--- a/static_files/chain/cdk-erigon/cdk-node/config.toml
+++ b/static_files/chain/cdk-erigon/cdk-node/config.toml
@@ -48,7 +48,7 @@ Environment = "{{.environment}}"
         RetryTime = "30s"
         VerifyProofInterval = "10s"
         GasOffset = 150000
-        SettlementBackend = "agglayer"
+        SettlementBackend = "l1"
         [Aggregator.DB]
                 Name = "{{.aggregator_db.name}}"
                 User = "{{.aggregator_db.user}}"
